--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -57,6 +57,8 @@
 	<string>bluetooth</string>
 	<key>NSCameraUsageDescription</key>
 	<string>카메라 접근 권한을 승인해주세요. 텀블러 인증 기능에서 사용할 예정이에요.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>비디오 촬영 시 오디오 녹음을 위해 마이크 권한이 필요합니다.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>백그라운드에서도 비콘을 감지하기 위해 위치 권한이 필요합니다.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
